<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App related -->
    <string name="app_name">Number Slider</string>

    <!-- Action bar -->
    <string name="action_new_game">New Game</string>
    <string name="action_info">Info</string>
    <string name="action_settings">Settings</string>

    <!-- Moves -->
    <string name="best_moves_key">Best</string>
    <string name="best_moves">Best</string>
    <string name="current_moves">Moves</string>

    <!-- Preferences: Board Size -->
    <string name="board_size_big">4 X 4</string>
    <string name="board_size_default">3</string>
    <string name="board_size_huge">5 X 5</string>
    <string name="board_size_key">Board Size</string>
    <string name="board_size_small">3 X 3</string>
    <string name="board_size_summary">Click to choose the board size</string>
    <string name="board_size_title">Board Size</string>

    <string-array name="board_size_entries">
        <item>@string/board_size_small</item>
        <item>@string/board_size_big</item>
        <item>@string/board_size_huge</item>
    </string-array>
    <string-array name="board_size_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Info Dialog -->
    <string name="info_dialog_title">Game Objective</string>
    <string name="info_dialog_message">Use swipe gestures to achieve the following:</string>
    <string name="info_dialog_image_content_description">Game Objective</string>
    <string name="info_dialog_neutral_button_text">Understood the game objective</string>

    <!-- Results Dialog -->
    <string name="results_dialog_title">Congratulations</string>
    <string name="results_dialog_newGame">Play Again</string>
    <string name="results_dialog_message">Game objective achieved!</string>

    <!-- Market: Rate this app -->
    <string name="market_rate_app_key">Rate the App</string>
    <string name="market_rate_app_title">Rate this App</string>
    <string name="market_rate_app_summary">Click here to rate this app</string>

    <!-- Market: Other Apps -->
    <string name="market_other_apps_by_us_key">Our App Portfolio</string>
    <string name="market_other_apps_by_us_title">Our App Portfolio</string>
    <string name="market_other_apps_by_us_summary">Click here to view other apps published by us</string>
    <string name="market_other_apps_by_us_publisher">Thotsakan Apps</string>

    <!-- AdMob -->
    <string name="banner_ad_unit_id">ca-app-pub-4624426958453943/9340866314</string>

</resources>