<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="true" >

    <!-- Game related preferences -->
    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="Game Preferences" >

        <!-- Board Size -->
        <ListPreference
            android:defaultValue="@string/board_size_small"
            android:entries="@array/board_size_entries"
            android:entryValues="@array/board_size_values"
            android:key="@string/board_size_key"
            android:summary="@string/board_size_summary"
            android:title="@string/board_size_title" />
    </PreferenceCategory>
    <!-- App related options -->
    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="App related options" >

        <!-- Rate this app -->
        <Preference
            android:key="@string/market_rate_app_key"
            android:summary="@string/market_rate_app_summary"
            android:title="@string/market_rate_app_title" />

        <!-- Other apps published by us -->
        <Preference
            android:key="@string/market_other_apps_by_us_key"
            android:summary="@string/market_other_apps_by_us_summary"
            android:title="@string/market_other_apps_by_us_title" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>