<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thotsakan.numberssort.MainActivity" >

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/action_new_game"
        android:icon="@drawable/ic_action_newgame"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_new_game"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_settings"/>

</menu>